# Parallel-genetic-tsp

./: README.md
experiments/: bestSolution_parallel(fastFlow).txt  bestSolution_parallel(native).txt  bestSolution_sequential.txt  execution_times_10000_15k.txt  execution_times_15000_15k.txt  execution_times_5000_15k.txt
genTSP/: CMakeLists.txt  executable  main.cpp
genTSP/src/graph/: graph.h
genTSP/src/overheadTest/: overheadFastFlow.cpp  overheadStd.cpp
genTSP/src/tsp/: fastFlowTSP.h  ffTSP.h  geneticAlgorithm.h  parallelTSP.h  sequentialTSP.h
